fix(ui): fix request list UI behavior when season list is too long

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -55,11 +55,11 @@ ul.cardList > li {
 }
 
 img.avatar-sm {
-  @apply w-5 mr-1 pr-0.5 rounded-full;
+  @apply w-5 h-5 mr-1.5 rounded-full transition duration-300 scale-100 transform-gpu group-hover:scale-105;
 }
 
 .card-field {
-  @apply flex items-center my-0.5 sm:my-1 text-sm;
+  @apply flex items-center py-0.5 sm:py-1 text-sm;
 }
 
 .card-field-name {
